--- a/bookinghotel-fe/package.json
+++ b/bookinghotel-fe/package.json
@@ -9,20 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "next": "14.2.5"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "5.3.3",
+    "@tailwindcss/postcss": "4.0.0",
     "@types/node": "20.11.30",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
-    "@tailwindcss/postcss": "4.0.0",
-    "tailwindcss": "3.4.4",
     "autoprefixer": "10.4.16",
-    "postcss": "8.4.31",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5"
-  }
+    "eslint-config-next": "14.2.5",
+    "postcss": "8.4.31",
+    "tailwindcss": "3.4.4",
+    "typescript": "5.3.3"
+  },
+  "main": "index.js",
+  "license": "MIT"
 }
