--- a/bookinghotel-fe/package.json
+++ b/bookinghotel-fe/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss-animatecss": "^3.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4.0.0",
