--- a/bookinghotel-fe/package.json
+++ b/bookinghotel-fe/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.545.0",
     "next": "^15.5.4",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
