--- a/bookinghotel-fe/package.json
+++ b/bookinghotel-fe/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "lucide-react": "^0.545.0",
@@ -22,6 +26,9 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.304",
+    "recharts": "^3.2.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animatecss": "^3.0.5"
   },
   "devDependencies": {
