--- a/bookinghotel-fe/package.json
+++ b/bookinghotel-fe/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
