--- a/BookingHotel-be/package.json
+++ b/BookingHotel-be/package.json
@@ -23,13 +23,14 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.1",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "emailjs-com": "^3.2.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
