--- a/bookinghotel-fe/package.json
+++ b/bookinghotel-fe/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-label": "^2.1.7",
@@ -30,14 +31,11 @@
     "primereact": "^10.9.7",
     "qs": "^6.14.0",
     "quill": "^2.0.3",
-    "quill-emoji": "^0.2.0",
     "quill-image-uploader": "^1.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.304",
-    "react-quill": "^2.0.0",
-    "react-quill-emoji": "^0.1.9",
     "react-quill-new": "^3.6.0",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
