--- a/bookinghotel-fe/package.json
+++ b/bookinghotel-fe/package.json
@@ -43,6 +43,7 @@
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-parallax-tilt": "^1.7.304",
