--- a/bookinghotel-fe/package.json
+++ b/bookinghotel-fe/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@reduxjs/toolkit": "^2.9.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.90.5",
@@ -48,7 +49,9 @@
     "react-intersection-observer": "^9.16.0",
     "react-parallax-tilt": "^1.7.304",
     "react-quill-new": "^3.6.0",
+    "react-redux": "^9.2.0",
     "recharts": "^3.2.1",
+    "redux-persist": "^6.0.0",
     "sonner": "^2.0.7",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
