contact function send email

--- a/BookingHotel-be/.env
+++ b/BookingHotel-be/.env
@@ -5,3 +5,8 @@ DB_PASS=
 DB_NAME=travel_booking
 
 SECRET_KEY=travelbookingNhom11
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=vothanhhoai2k5@gmail.com
+SMTP_PASS=miow pfsk onuv hwfr
