--- a/BookingHotel-be/package.json
+++ b/BookingHotel-be/package.json
@@ -36,6 +36,7 @@
     "exceljs": "^4.4.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mssql": "^11.0.1",
     "multer": "^2.0.2",
     "mysql2": "^3.15.2",
@@ -48,6 +49,7 @@
     "rxjs": "^7.8.1",
     "sharp": "^0.34.4",
     "slugify": "^1.6.6",
+    "stripe": "^19.2.0",
     "typeorm": "^0.3.27",
     "typeorm-extension": "^3.7.1"
   },
