--- a/BookingHotel-be/package.json
+++ b/BookingHotel-be/package.json
@@ -26,12 +26,15 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.8",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.8",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
-    "exceljs": "^4.4.0",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
+    "exceljs": "^4.4.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
@@ -46,6 +49,7 @@
     "rxjs": "^7.8.1",
     "sharp": "^0.34.4",
     "slugify": "^1.6.6",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.27",
     "typeorm-extension": "^3.7.1"
   },
