--- a/BookingHotel-be/.env
+++ b/BookingHotel-be/.env
@@ -12,6 +12,11 @@ SMTP_USER=vothanhhoai2k5@gmail.com
 SMTP_PASS=miow pfsk onuv hwfr
 
 
+CLIENT_ID=471737111062-asth7fujdk57flptu3sqtlc5s7emckob.apps.googleusercontent.com
+CLIENT_SECRET=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
+CALLBACK_URL=http://localhost:3636/auth/google/callback
+
+
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are NOT automatically loaded by Prisma.
 # Please add `import "dotenv/config";` to your `prisma.config.ts` file, or use the Prisma CLI with Bun
