--- a/BookingHotel-be/package.json
+++ b/BookingHotel-be/package.json
@@ -28,17 +28,14 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.1.8",
-    "@nestjs/typeorm": "^11.0.0",
-    "@nestjs/websockets": "^11.1.8",
     "@nestjs/serve-static": "^5.0.4",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.8",
     "axios": "^1.13.1",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
-    "dotenv": "^17.2.3",
-    "exceljs": "^4.4.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "exceljs": "^4.4.0",
@@ -51,6 +48,7 @@
     "mysql2": "^3.15.2",
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pdfkit": "^0.17.2",
@@ -78,6 +76,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^22.18.9",
     "@types/nodemailer": "^7.0.3",
+    "@types/passport-google-oauth20": "^2.0.17",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.46.0",
     "@typescript-eslint/parser": "^8.46.0",
