--- a/bookinghotel-fe/package.json
+++ b/bookinghotel-fe/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@heroui/react": "^2.8.5",
     "@heroui/slider": "^2.4.24",
     "@heroui/styles": "^3.0.0-alpha.35",
@@ -32,6 +34,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.15.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "lucide-react": "^0.545.0",
@@ -42,6 +46,7 @@
     "quill": "^2.0.3",
     "quill2-emoji": "^0.1.2",
     "react": "19.2.0",
+    "react-contenteditable": "^3.3.7",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
