hau/github-oauth

--- a/BookingHotel-be/.env
+++ b/BookingHotel-be/.env
@@ -17,6 +17,13 @@ CLIENT_SECRET=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
 CALLBACK_URL=http://localhost:3636/auth/google/callback
 
 
+CLIENT_GITHUB_ID=Ov23lioPGauEzpYIbrwD
+CLIENT_GITHUB_SECRET=9a58e97e8e571c143d37e07c293330055b14f970
+
+
+GITHUB_CALLBACK_URL=http://localhost:3636/auth/github/callback
+
+
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are NOT automatically loaded by Prisma.
 # Please add `import "dotenv/config";` to your `prisma.config.ts` file, or use the Prisma CLI with Bun
