--- a/BookingHotel-be/package.json
+++ b/BookingHotel-be/package.json
@@ -48,6 +48,7 @@
     "mysql2": "^3.15.2",
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
+    "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
