--- a/bookinghotel-fe/package.json
+++ b/bookinghotel-fe/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "emoji-picker-react": "^4.15.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
@@ -69,6 +70,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/emoji-mart": "^3.0.14",
     "@types/node": "^20.19.10",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19",
