--- a/bookinghotel-fe/package.json
+++ b/bookinghotel-fe/package.json
@@ -49,6 +49,7 @@
     "react-contenteditable": "^3.3.7",
     "react-day-picker": "^9.11.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
