--- a/BookingHotel-be/package.json
+++ b/BookingHotel-be/package.json
@@ -62,7 +62,8 @@
     "socket.io": "^4.8.1",
     "stripe": "^19.2.0",
     "typeorm": "^0.3.27",
-    "typeorm-extension": "^3.7.1"
+    "typeorm-extension": "^3.7.1",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
