--- a/bookinghotel-fe/package.json
+++ b/bookinghotel-fe/package.json
@@ -66,6 +66,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animatecss": "^3.0.5",
     "uuid": "^13.0.0",
+    "web-push": "^3.6.7",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
