--- a/bookinghotel-fe/package.json
+++ b/bookinghotel-fe/package.json
@@ -38,6 +38,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
     "next": "^15.5.4",
     "primeicons": "^7.0.0",
@@ -53,6 +54,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-leaflet": "^4.2.1",
     "react-parallax-tilt": "^1.7.304",
     "react-quill-new": "^3.6.0",
     "react-redux": "^9.2.0",
@@ -73,6 +75,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/emoji-mart": "^3.0.14",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20.19.10",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19",
