--- a/bookinghotel-fe/tsconfig.json
+++ b/bookinghotel-fe/tsconfig.json
@@ -34,7 +34,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "src/app/admin/promotion/useDiscounts.js"  ],
   "exclude": [
     "node_modules"
   ]
